--- a/webapp/main.html
+++ b/webapp/main.html
@@ -118,43 +118,51 @@
                     <div class="temp-table-context-wrap false undefined">
                       <div class="main-sub">
                         <span class="main" value="{{detail_dict["clauseId"]}}">
-                          {% if loop.first %}主 - {% else %}附 - {% endif %}{{ detail_dict["clauseName"] }}
+                          {% if loop.first %}主 - {% else %}附 - {% endif %}
+                          {% if detail_dict["clauseName"] == ""} %} - {% else %} {{ detail_dict["clauseName"] }} {% endif%}
                         </span>
                       </div>
                       {% for RateDetail_dict in detail_dict["feeList"] %}
                           <div class="tree-table">
                             <div class="factor-col">
                               {% if RateDetail_dict["rateCodeDescView"] == "" %}
-                                --
+                                -
                               {% else %}
                                 RateDetail_dict["rateCodeDescView"]
                               {% endif%}
                             </div>
                             <div class="branch-box">
-                              <div class="tree-table">
-                               
-                                  {% for eachRate in RateDetail_dict["rateValues"] %}  
-                                    <div class="payperiod-col">{{ eachRate["rateCodeDesc"] }}</div>
-                                    <div class="branch-box">
-                                      <div>
-                                            <div class="tree-table fee-row">
-                                              {% if product_dict["data"]["data"]["rateDetail"]["configType"] == 2 %}
-                                                <div class="fee-td "><div>{{ eachRate["receivable"]["first_rate"] }}</div></div>
-                                                <div class="fee-td "><div> - </div></div>
-                                                <div class="fee-td "><div>{{ eachRate["receivable"]["second_rate"] }}</div></div>
-                                                <div class="fee-td "><div>{{ eachRate["receivable"]["third_rate"] }}</div></div>
-                                                <div class="fee-td "><div>{{ eachRate["receivable"]["fourth_rate"] }}</div></div>
-                                                <div class="fee-td "><div>{{ eachRate["receivable"]["fifth_rate"] }}</div></div>
-                                              {% else %}
-                                                <div class="fee-td "><div>{{ eachRate["receivable"]["first_rate"] }}</div></div>
-                                                <div class="fee-td "><div> - </div></div>
-                                                <div class="fee-td "><div>{{ eachRate["receivable"]["second_rate"] }}</div></div>
-                                              {% endif %}
-                                            </div>
-                                     </div>
-                                   </div>
-                                  {% endfor %}
-                              </div>
+                              {% for eachRate in RateDetail_dict["rateValues"] %}  
+                                <div class="tree-table">
+                                      <div class="payperiod-col">{{ eachRate["rateCodeDesc"] }}</div>
+                                      <div class="branch-box">
+                                        <div>
+                                              <div class="tree-table fee-row">
+                                                {% if product_dict["data"]["data"]["rateDetail"]["configType"] == 2 %}
+                                                  <div class="fee-td "><div>{{ eachRate["receivable"]["first"] }}</div></div>
+                                                  {% if "activeValue" in eachRate["letout"].keys() % }
+                                                    <div class="fee-td "><div> eachRate["letout"]["activeValue"] </div></div>
+                                                  {% else %}
+                                                    <div class="fee-td "><div> - </div></div>
+                                                  {% endif %}
+                                                  <div class="fee-td "><div>{{ eachRate["receivable"]["second"] }}</div></div>
+                                                  <div class="fee-td "><div>{{ eachRate["receivable"]["third"] }}</div></div>
+                                                  <div class="fee-td "><div>{{ eachRate["receivable"]["fourth"] }}</div></div>
+                                                  <div class="fee-td "><div>{{ eachRate["receivable"]["fifth"] }}</div></div>
+                                                {% else %}
+                                                  <div class="fee-td "><div>{{ eachRate["receivable"]["first"] }}</div></div>
+                                                  {% if "activeValue" in eachRate["letout"].keys() % }
+                                                    <div class="fee-td "><div> eachRate["letout"]["activeValue"] </div></div>
+                                                  {% else %}
+                                                    <div class="fee-td "><div> - </div></div>
+                                                  {% endif %}
+                                                  <div class="fee-td "><div>{{ eachRate["receivable"]["second"] }}</div></div>
+                                                {% endif %}
+                                              </div>
+                                      </div>
+                                    </div>
+                                </div>
+                              {% endfor %}
                             </div>
                           </div>                          
                       {% endfor %}
