--- a/webapp/main.html
+++ b/webapp/main.html
@@ -174,35 +174,30 @@
           {% elif product_dict["program_id"] == 1004 %}
             <!-- Fengqi template -->
             <div class="el-popover el-popper">
-              {% for details_dict in product_dict["details"] %}
-                {% for detail_keys, detail_values in details_dict.items() %}
+                {% for detail_dict in product_dict["data"]["data"]["list"] %}
                   <table class="yjtablez fengqitable">
-                    <caption>{{ detail_values[0]["productGrade"] }}</caption>
+                    <caption>{{ detail_dict["productGrade"] }}</caption>
                     <tr>
                       <td><span>缴费年限</span></td>
-                      <td><span>30年</span></td>
-                      <td><span>20年</span></td>
-                      <td><span>15年</span></td>
-                      <td><span>10年</span></td>
-                      <td><span>5年</span></td>
-                      <td><span>1年</span></td>
+                      {% for term in product_dict["data"]["data"]["term"] %}
+                        <td><span>{{ term }}年</span></td>
+                      {% endfor %}
                     </tr>
-                    {% for eachRecord in detail_values %}
+                    {% for commissions in detail_dict["commissionList"] %}
                       <tr>
                         <td>
                           {% if loop.first%}首年{% else %}第{{ loop.index }}年{% endif %}
                         </td>
-                        <td>{{ eachRecord["commission_1"]}}% {%if eachRecord["subsidyCommission_1"] != '-' %}+{{ eachRecord["subsidyCommission_1"] }}%补贴{% endif %}</td>
-                        <td>{{ eachRecord["commission_2"]}}% {%if eachRecord["subsidyCommission_2"] != '-' %}+{{ eachRecord["subsidyCommission_2"] }}%补贴{% endif %}</td>
-                        <td>{{ eachRecord["commission_3"]}}% {%if eachRecord["subsidyCommission_3"] != '-' %}+{{ eachRecord["subsidyCommission_3"] }}%补贴{% endif %}</td>
-                        <td>{{ eachRecord["commission_4"]}}% {%if eachRecord["subsidyCommission_4"] != '-' %}+{{ eachRecord["subsidyCommission_4"] }}%补贴{% endif %}</td>
-                        <td>{{ eachRecord["commission_5"]}}% {%if eachRecord["subsidyCommission_5"] != '-' %}+{{ eachRecord["subsidyCommission_5"] }}%补贴{% endif %}</td>
-                        <td>{{ eachRecord["commission_6"]}}% {%if eachRecord["subsidyCommission_6"] != '-' %}+{{ eachRecord["subsidyCommission_6"] }}%补贴{% endif %}</td>                     
+                        {% for commission in commissions["commmison"] %}
+                          <td>
+                            {% if commission["commission"] == "" %} - {% else %} {{ commission["commission"] }}%{% endif %}
+                            {% if commission["subsidyCommission"] == "" %}{% else %} + {{ commission["subsidyCommission"] }}%补贴 {% endif %}
+                          </td>
+                        {% endfor %}                     
                       </tr>
                     {% endfor %}              
                   </table>
                 {% endfor %}
-              {% endfor %}
             </div>
           {% elif product_dict["program_id"] == 1000 %}
             <table class="table">
