updata product link

--- a/webapp/main.html
+++ b/webapp/main.html
@@ -80,7 +80,7 @@
             <!-- <button>在全平台搜索此产品</button> -->
             {% if product_dict["program_id"] == 1005 %}
               {% for url in product_dict["data"]["proposal_url"] %}
-                <button type="button" class="btn btn-default" {% if product_dict["data"]["proposal_url"] | length = 0 %} disabled {% endif %} ><a href="{%if product_dict["data"]["proposal_url"] | length = 0%} # {% else %} {{url["proposalUrl"]}} {% endif %}">点此投保</a></button>
+                <button type="button" class="btn btn-default" {% if product_dict["data"]["proposal_url"] | length == 0 %} disabled {% endif %} ><a href="{% if product_dict["data"]["proposal_url"] | length == 0 %} # {% else %} {{url["proposalUrl"]}} {% endif %}">点此投保</a></button>
               {% endfor %}
             {% elif product_dict["program_id"] == 1004 %}
               <button type="button" class="btn btn-default"><a href="https://www.fxyf99.com/product/bz0190725417/{{product_dict["product_id"]}}">点此投保</a></button>
