--- a/webapp/main.html
+++ b/webapp/main.html
@@ -203,7 +203,7 @@
                       <caption>
                         {% if detail_dict["name"] == "" %}
                           {{ product_dict["product_name"] }}
-                        {% elif %}
+                        {% else %}
                           {{ detail_dict["name"] }}
                         {% endif %}
                       </caption>
